[package]
name = "iced-test-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.4.2"
iced_native = "0.5.1"
# iced_futures = "0.4.1"
# iced_graphics = "0.3.1"
# iced_winit = "0.4.0"
# iced_glutin = "0.3.0"
# iced_glow = "0.3.0"
